# bifrost-openclaw-optimizer

./: .env.example  .gitignore  DEPLOYMENT_STATUS.md  Dockerfile.bifrost  INTEGRATION_COMPLETE.md  INTEGRATION_SUCCESS.md  MODEL_ROUTER_REVIEW.md  README.md  README_EMBEDDING_INTEGRATION.md  REASONING_OPTIMIZATION_REPORT.md  SEMANTIC_CACHE_SETUP.md  TEST_REPORT.md  TODO_TOKEN_OPTIMIZATION.md  cache_analysis.md  config.json  docker-compose.prod.yml  docker-compose.yml  goal_analysis.md  goal_customer.md  package-lock.json  package.json  routing_strategy.md  semantic_session_design.md  tasks.json  test_integration.sh  test_semantic_cache.sh  test_smoke.sh  todolist.md  xheader.json
.github/workflows/: deploy.yml
docs/: CASUAL_FALLBACK_STRATEGY.md  DOCKER_DEPLOYMENT.md  EMBEDDING_INTEGRATION.md  SEMANTIC_ROUTER_SOLUTION.md  UPGRADE_SUMMARY.md  embedding_classifier_design.md  embedding_quickstart.md
embedding_service/: .dockerignore  Dockerfile  README.md  V3_DEPLOY_CHECKLIST.md  benchmark.sh  pyproject.toml  routes.yaml  test_casual_fallback.sh  verify_v3.sh
embedding_service/src/embedding_service/: main.py
plugins/classifier/: Makefile  config.go  embedding_client.go  go.mod  go.sum  in_package.go  main.go  scoring.go
plugins/smart_classifier/: go.mod  main.go
scripts/: patch_plugins.py  watch-config.sh
tests/: classifier_e2e.test.js  e2e_helper.js  embedding_classify.test.js  routing_e2e.test.js  routing_rules.test.js  test_classifier_improvements.go
