[project]
name = "embedding-service"
version = "2.0.0"
description = "Bifrost Intent Classifier v2 - Using Semantic Router"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "semantic-router>=0.0.1",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "sentence-transformers>=2.0.0",
    "requests>=2.31.0",
]

[project.scripts]
server = "embedding_service.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" },
]
